--- a/style.css
+++ b/style.css
@@ -1,24 +1,72 @@
-body{
+* {
+    box-sizing: border-box;
+}
+
+h3,
+p {
+    margin: 0;
+}
+
+body {
     background-color: #D5E1EF;
     height: 100vh;
     align-content: center;
 }
-article{
+
+article {
     background-color: #fff;
     width: 320px;
     height: 499px;
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
+    padding: 16px;
 
-/* display: flex; */
-/* flex-direction: column; */
-/* align-items: flex-start; */
-/* padding: 16px 16px 40px; */
-/* gap: 24px; */
-
-
-/* box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518); */
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: flex-start; */
+    /* padding: 16px 16px 40px; */
+    /* gap: 24px; */
 
 
+    /* box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518); */
+}
+
+.outfit-regular {
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.outfit-bold {
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+img {
+    width: 100%;
+    /* w100p */
+    margin-bottom: 24px;
+}
+
+h3 {
+    margin-bottom: 16px;
+    text-align: center;
+    font-size: 22px;
+    line-height: 120%;
+    color: #1F314F;
+}
+
+p {
+    text-align: center;
+    font-size: 15px;
+    line-height: 140%;
+    letter-spacing: 0.2px;
+    color: #68778D;
+    width: 256px;
+    margin-left: auto;
+    margin-right: auto;
 }
